--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="styles/style.css">
+  
   <script>
     tailwind.config = {
       theme: {
@@ -20,5 +22,9 @@
   <h1 class="text-3xl font-bold underline text-clifford">
     Hello world!
   </h1>
+
+
+
+  <script src="JS/style.js"></script>
 </body>
 </html>
