--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <img class=" w-full image-full" src="images/pexels-karolina-grabowska-4386321.jpg" alt="">
                     <div class="mx-auto ">
                       <h3 class="text-center text-3xl font-bold mt-5">Savings Calculation</h3>
-                      <div class="overflow-x-auto">
-                        <table class="table w-full mt-7 border-0 outline-none ">
+                      <div class="">
+                        <table class="table w-full ml-10 mt-7 border-0 outline-none ">
                           <!-- row 1 -->
                             <tr>
                               <th><p id="person" class=" text-xl text-left">Name:</p> </th>
@@ -48,7 +48,7 @@
                           <!-- Table 2 -->
                           
                         </table>
-                        <table class="table w-full mt-7 border-0 outline-none ">
+                        <table class="table w-full mt-7 ml-10 border-0 outline-none ">
                           <h3 class="text-center text-3xl font-bold mt-5">Expenses</h3>
                           <!-- row 1 -->
                             <tr class="">
@@ -71,7 +71,7 @@
                         <h3 class="text-center text-xl font-bold mt-5">Total Expenses:<span>5000</span></h3>
                         <h3 class="text-center text-xl font-bold mt-5">Balance:<span>4500</span></h3>
                         <div class="flex justify-center items-center gap-5 mt-10">
-                          <p id="person" class=" text-xl text-left">save:</p>
+                          <p id="person" class="font-bold text-xl">Save:</p>
                           <input type="text" placeholder="%Saving" class="text-[18px] input input-bordered h-11 bg-slate-200 border-0 w-3/12" />
                           <p>%</p>
                           <button class="btn normal-case px-5 text-[18px] bg-blue-500">Calculate</button>
@@ -87,40 +87,3 @@
     </body>
 </html>
 
-
-
-
-
-<!-- <div class="mx-10">
-  <div class="mx-24">
-    <h3 class="text-center text-3xl font-bold mt-5">Savings Calculation</h3>
-    <div class="flex text-xl pt-[30px] items-center gap-3">
-      <p id="person" class="">Name:</p>
-      <input type="text" placeholder="Your name" class="text-xl input input-bordered h-9 w-6/12 border-0 " />
-    </div>
-    <div class="flex text-xl pt-[10px] items-center gap-3">
-      <p id="person" class="">Income:</p>
-      <input type="text" placeholder="$ Your Amount" class="text-xl input input-bordered h-9 w-6/12 border-0" />
-    </div>
-
-    
-    <!-- Expenses Part -->
-
-  <!-- </div>
-  <div class="mx-24 mt-10">
-    <h3 class="text-center text-3xl font-bold mt-5">Expenses</h3>
-    <div class="flex text-xl pt-[30px] items-center gap-3">
-      <p id="person" class="">Food:</p>
-      <input type="text" placeholder="Your name" class="text-xl input input-bordered h-9 w-6/12 border-0 " />
-    </div>
-    <div class="flex text-xl pt-[10px] items-center gap-3">
-      <p id="person" class="">Rent:</p>
-      <input type="text" placeholder="$ Your Amount" class="text-xl input input-bordered h-9 w-6/12 border-0" />
-    </div>
-    <div class="flex text-xl pt-[10px] items-center gap-3">
-      <p id="person" class="">Clothes:</p>
-      <input type="text" placeholder="$ Your Amount" class="text-xl input input-bordered h-9 w-6/12 border-0" />
-    </div>
-
-  </div>
-</div> --> -->
