--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                         <table class="table w-full ml-10 mt-7 border-0 outline-none ">
                           <!-- row 1 -->
                             <tr>
-                              <th><p id="person" class=" text-left">Name:</p> </th>
+                              <th><p id="" class=" text-left">Name:</p> </th>
                               <td><input type="text" placeholder="Your name" class=" text-[18px] input input-bordered h-9 border-0 " /></td>
                             </tr>
                             <!-- row 2 -->
                             <tr>
-                              <th><p id="person" class=" text-left">Income:</p> </th>
+                              <th><p id="" class=" text-left">Income:</p> </th>
                               <td><input type="text" placeholder="$ Your Amount" class="text-[18px] input input-bordered h-9 border-0" /></td>
                             </tr>
                             
@@ -52,17 +52,17 @@
                           <h3 class="text-center text-3xl font-bold mt-5">Expenses</h3>
                           <!-- row 1 -->
                             <tr class="">
-                              <th><p id="person" class=" text-left">Food:</p> </th>
+                              <th><p id="" class=" text-left">Food:</p> </th>
                               <td><input type="text" placeholder="$Food expenses" class="text-[18px] input input-bordered h-9 border-0 " /></td>
                             </tr>
                             <!-- row 2 -->
                             <tr>
-                              <th><p id="person" class=" text-left">Rent:</p> </th>
+                              <th><p id="" class=" text-left">Rent:</p> </th>
                               <td><input type="text" placeholder="$Rent expenses" class="text-[18px] input input-bordered h-9 border-0" /></td>
                             </tr>
                             <!-- row 3 -->
                             <tr>
-                              <th><p id="person" class=" text-left">Clothes:</p> </th>
+                              <th><p id="" class=" text-left">Clothes:</p> </th>
                               <td><input type="text" placeholder="$Clothes expenses" class="text-[18px] input input-bordered h-9 border-0" /></td>
                             </tr>
                           </tbody>
@@ -71,7 +71,7 @@
                         <h3 class="text-center font-bold mt-5">Total Expenses:<span>5000</span></h3>
                         <h3 class="text-center font-bold mt-5">Balance:<span>4500</span></h3>
                         <div class="flex justify-center items-center gap-5 mt-10">
-                          <p id="person" class="font-bold">Save:</p>
+                          <p id="" class="font-bold">Save:</p>
                           <input type="text" placeholder="%Saving" class="text-center text-[18px] input input-bordered h-11 bg-slate-200 border-0 w-3/12" />
                           <p>%</p>
                           <button class="btn normal-case px-5 text-[18px] bg-blue-500">Calculate</button>
