--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link href="https://cdn.jsdelivr.net/npm/daisyui@2.50.1/dist/full.css" rel="stylesheet" type="text/css">
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="styles/style.css">
+        <link rel="icon" href="images/star.ico">
+        
+        <title>Money Count</title>
         <script>
     tailwind.config = {
       theme: {
