--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             <section class="border lg:mx-40">
                 <div class="grid lg:grid-cols-2">
                     <img class="h-[700px] w-full image-full" src="images/pexels-karolina-grabowska-4386321.jpg" alt="">
-                    <div class="mx-auto bg-slate-100">
+                    <div class="mx-auto pt-3 bg-slate-100">
                       <h3 class="text-center text-3xl font-bold">Savings Calculation</h3>
                       <div class="">
                         <table class="table  ml-10 mt-4 border-0 outline-none ">
                           <!-- row 1 -->
                             <tr class="leading-3">
-                              <th class="py-2 border-0 bg-slate-100" ><p id="" class="text-left">Name:</p> </th>
-                              <td class="py-2 border-0 bg-slate-100"><input id="name-field" type="text" placeholder="Your name" class="bg-slate-100  text-[16px] input input-bordered h-9 border-0 " value="Hafiz Ullah" /></td>
+                              <th class="py-1 border-0 bg-slate-100" ><p id="" class="text-left">Name:</p> </th>
+                              <td class="py-1 border-0 bg-slate-100"><input id="name-field" type="text" placeholder="Your name" class="bg-slate-100  text-[16px] input input-bordered h-9 border-0 " value="Hafiz Ullah" /></td>
                             </tr>
                             <!-- row 2 -->
                             <tr>
-                              <th class="py-2 border-0 bg-slate-100"><p id="" class=" text-left">Income:</p> </th>
-                              <td class="py-2 border-0 bg-slate-100"><input id="input-field" type="text" placeholder="$ Your Amount" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0" value="10000" /></td>
+                              <th class="py-1 border-0 bg-slate-100"><p id="" class=" text-left">Income:</p> </th>
+                              <td class="py-1 border-0 bg-slate-100"><input id="input-field" type="text" placeholder="$ Your Amount" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0" value="10000" /></td>
                             </tr>
                             
                           </tbody>
@@ -55,18 +55,18 @@
                           <h3 class="text-center text-3xl font-bold mt-5">Expenses</h3>
                           <!-- row 1 -->
                             <tr class="">
-                              <th class="py-2 border-0 bg-slate-100"><p id="" class=" text-left">Food:</p> </th>
-                              <td class="py-2 border-0 bg-slate-100"><input id="food-field" type="text" placeholder="$Food expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0 "  value="3000"/></td>
+                              <th class="py-1 border-0 bg-slate-100"><p id="" class=" text-left">Food:</p> </th>
+                              <td class="py-1 border-0 bg-slate-100"><input id="food-field" type="text" placeholder="$Food expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0 "  value="3000"/></td>
                             </tr>
                             <!-- row 2 -->
                             <tr>
-                              <th class="py-2 border-0 bg-slate-100"><p id="" class=" text-left">Rent:</p> </th>
-                              <td class="py-2 border-0 bg-slate-100"><input id="rent-field" type="text" placeholder="$Rent expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0"  value="2000"/></td>
+                              <th class="py-1 border-0 bg-slate-100"><p id="" class=" text-left">Rent:</p> </th>
+                              <td class="py-1 border-0 bg-slate-100"><input id="rent-field" type="text" placeholder="$Rent expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0"  value="2000"/></td>
                             </tr>
                             <!-- row 3 -->
                             <tr>
-                              <th class="py-2 border-0 bg-slate-100"><p id="" class=" text-left">Clothes:</p> </th>
-                              <td class="py-2 border-0 bg-slate-100"><input id="cloths-field" type="text" placeholder="$Clothes expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0" value="500" /></td>
+                              <th class="py-1 border-0 bg-slate-100"><p id="" class=" text-left">Clothes:</p> </th>
+                              <td class="py-1 border-0 bg-slate-100"><input id="cloths-field" type="text" placeholder="$Clothes expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0" value="500" /></td>
                             </tr>
                           </tbody>
                         </table>
