--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                           <!-- row 1 -->
                             <tr class="leading-3">
                               <th class="py-1 border-0 bg-slate-100" ><p id="" class="text-left">Name:</p> </th>
-                              <td class="py-1 border-0 bg-slate-100"><input onkeypress="input()" id="name-field" type="text" placeholder="Your name" class="bg-slate-100  text-[16px] input input-bordered h-9 border-0 " value="Hafiz Ullah" /></td>
+                              <td class="py-1 border-0 bg-slate-100"><input  id="name-field" type="text" placeholder="Your name" class="bg-slate-100  text-[16px] input input-bordered h-9 border-0 " value="Khalid Khandokar"/></td>
                             </tr>
                             <!-- row 2 -->
                             <tr>
                               <th class="py-1 border-0 bg-slate-100"><p id="" class=" text-left">Income:</p> </th>
-                              <td class="py-1 border-0 bg-slate-100"><input onkeypress="input()" id="input-field" type="text" placeholder="$ Your Amount" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0" value="10000" /></td>
+                              <td class="py-1 border-0 bg-slate-100"><input  id="input-field" type="text" placeholder="$ Your Amount" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0" value="25000"/></td>
                             </tr>
                             
                           </tbody>
@@ -56,31 +56,31 @@
                           <!-- row 1 -->
                             <tr class="">
                               <th class="py-1 border-0 bg-slate-100"><p id="" class=" text-left">Food:</p> </th>
-                              <td class="py-1 border-0 bg-slate-100"><input onkeypress="input()" id="food-field" type="text" placeholder="$Food expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0 "  value="3000"/></td>
+                              <td class="py-1 border-0 bg-slate-100"><input  id="food-field" type="text" placeholder="$Food expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0 " value="7000"/></td>
                             </tr>
                             <!-- row 2 -->
                             <tr>
                               <th class="py-1 border-0 bg-slate-100"><p id="" class=" text-left">Rent:</p> </th>
-                              <td class="py-1 border-0 bg-slate-100"><input onkeypress="input()" id="rent-field" type="text" placeholder="$Rent expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0"  value="2000"/></td>
+                              <td class="py-1 border-0 bg-slate-100"><input  id="rent-field" type="text" placeholder="$Rent expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0" value="15000"/></td>
                             </tr>
                             <!-- row 3 -->
                             <tr>
                               <th class="py-1 border-0 bg-slate-100"><p id="" class=" text-left">Clothes:</p> </th>
-                              <td class="py-1 border-0 bg-slate-100"><input onkeypress="input()" id="cloths-field" type="text" placeholder="$Clothes expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0" value="500" /></td>
+                              <td class="py-1 border-0 bg-slate-100"><input  id="cloths-field" type="text" placeholder="$Clothes expenses" class="bg-slate-100 text-[16px] input input-bordered h-9 border-0"  value="1000"/></td>
                             </tr>
                           </tbody>
                         </table>
                         <div class="flex justify-center items-center mx-auto"><button id="btn-calculate" class="btn normal-case px-10 text-[16px] mt-5 bg-blue-500">Calculate</button></div>
-                        <h3 class="text-center font-bold mt-3">Total Expenses:<span id="expenses">5500</span></h3>
-                        <h3 class="text-center font-bold mt-3">Balance:<span id="balance">4500</span></h3>
+                        <h3 class="text-center font-bold mt-3">Total Expenses:<span id="expenses">00</span></h3>
+                        <h3 class="text-center font-bold mt-3">Balance:<span id="balance">00</span></h3>
                         <div class="flex items-center gap-5 mt-10 w-9/12 mx-auto ">
                           <p id="" class="font-bold">Save:</p>
-                          <input id="save-field" type="text" placeholder="%Saving" class="text-center text-[16px] input input-bordered h-11 bg-slate-200 border-0 w-4/12" value="20"/>
+                          <input id="save-field" type="text" placeholder="%Saving" class="text-center text-[16px] input input-bordered h-11 bg-slate-200 border-0 w-4/12"/>
                           <p>%</p>
                           <button id="saving-btn" onclick="saveMoney()" class="btn normal-case px-8 text-[16px] bg-blue-500">Save</button>
                         </div>
-                        <h3 class="text-center font-bold mt-3">Saving Amount:<span id="saving-amount">2000</span></h3>
-                        <h3 class="text-center font-bold mt-3">Remaining Balance:<span id="remaining-amount">2500</spa></h3>
+                        <h3 class="text-center font-bold mt-3">Saving Amount:<span id="saving-amount">00</span></h3>
+                        <h3 class="text-center font-bold mt-3">Remaining Balance:<span id="remaining-amount">00</spa></h3>
                       </div>
                     </div>
                 </div>
@@ -102,6 +102,8 @@
         </main>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="JS/style.js"></script>
+        <!-- <script src="JS/table.js"></script> -->
+          
     </body>
 </html>
 
