--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </head>
     <body>
         <header>
-            <h1 class="mt-8 text-5xl font-bold text-clifford text-center text-[#31A5AC]">
+            <h1 class="mt-8 text-5xl font-bold text-center text-[#31A5AC]">
                 Money Master💰
             </h1>
         </header>
@@ -75,7 +75,7 @@
                         <h3 class="text-center font-bold mt-3">Balance:<span id="balance">00</span></h3>
                         <div class="flex items-center gap-5 mt-10 w-9/12 mx-auto ">
                           <p id="" class="font-bold">Save:</p>
-                          <input id="save-field" type="text" placeholder="%Saving" class="text-center text-[16px] input input-bordered h-11 bg-slate-200 border-0 w-4/12"/>
+                          <input id="save-field" type="text" placeholder="%Saving" class="text-center text-[16px] input input-bordered h-11 bg-slate-200 border-0 w-4/12" value="20"/>
                           <p>%</p>
                           <button id="saving-btn" onclick="saveMoney()" class="btn normal-case px-8 text-[16px] bg-blue-500">Save</button>
                         </div>
@@ -86,11 +86,12 @@
                 </div>
             </section>
             <section>
-              <table id="second-table" class="table mx-auto mt-5 border w-9/12 text-center">
+              <table id="second-table" class="container table mx-auto mt-5 border w-10/12 text-center">
                 <tr>
                   <th>User name</th>
                   <th>Income</th>
                   <th>Expenses</th>
+                  <th>Balance</th>
                   <th>Savings</th>
                   <th>Remaining</th>
                 </tr>
@@ -102,7 +103,7 @@
         </main>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="JS/style.js"></script>
-        <!-- <script src="JS/table.js"></script> -->
+        <script src="JS/table.js"></script>
           
     </body>
 </html>
